Fix task body color contrast issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ article {
 }
 
 .task-body{
-  color: #fff;
+  color: #000;
   text-align: left;
 
 }
